--- a/assistant-rest-admin/pom.xml
+++ b/assistant-rest-admin/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.daole.cloud</groupId>
     <artifactId>assistant-rest-admin</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>assistant-rest-admin</name>
     <description>Demo project for Spring Boot</description>
 
@@ -37,11 +37,34 @@
     </dependencies>
 
     <build>
+        <finalName>assistant-rest-admin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- Docker maven plugin -->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <dockerHost>http://49.235.82.50:2375</dockerHost>
+                    <imageName>49.235.82.50:8001/${project.build.finalName}:${project.version}</imageName>
+                    <baseImage>java</baseImage>
+                    <entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>
+                    <exposes>1111</exposes>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                    <forceTags>true</forceTags>
+                </configuration>
+            </plugin>
+            <!-- Docker maven plugin -->
         </plugins>
     </build>
 
