--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <groupId>com.daole.cloud</groupId>
     <artifactId>daole-server</artifactId>
+    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>daole-server</name>
     <description>Demo project for Spring Boot</description>
