--- a/sso-rest-admin/pom.xml
+++ b/sso-rest-admin/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.daole.cloud</groupId>
         <artifactId>daole-server</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>com.daole.cloud</groupId>
     <artifactId>sso-rest-admin</artifactId>
