--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>assistant-rest-admin</module>
         <module>sso-rest-admin</module>
+        <module>commom-rst-admin</module>
     </modules>
 
     <dependencies>
