--- a/assistant-rest-admin/pom.xml
+++ b/assistant-rest-admin/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <groupId>com.daole.cloud</groupId>
     <artifactId>assistant-rest-admin</artifactId>
+    <packaging>jar</packaging>
     <version>0.0.1</version>
     <name>assistant-rest-admin</name>
     <description>Demo project for Spring Boot</description>
