--- a/sso-rest-admin/pom.xml
+++ b/sso-rest-admin/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <groupId>com.daole.cloud</groupId>
     <artifactId>sso-rest-admin</artifactId>
+    <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>sso-rest-admin</name>
     <description>Demo project for Spring Boot</description>
