--- a/assistant-rest-admin/pom.xml
+++ b/assistant-rest-admin/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.daole.cloud</groupId>
             <artifactId>commom-rest-admin</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -43,28 +43,33 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; 指定该Main Class为全局的唯一入口 &ndash;&gt;-->
+                    <!--<mainClass>com.daole.cloud.assistant</mainClass>-->
+                    <!--<layout>ZIP</layout>-->
+                <!--</configuration>-->
             </plugin>
             <!-- Docker maven plugin -->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <configuration>
-                    <dockerHost>http://49.235.82.50:2375</dockerHost>
-                    <imageName>49.235.82.50:8001/${project.build.finalName}:${project.version}</imageName>
-                    <baseImage>java</baseImage>
-                    <entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>
-                    <exposes>1111</exposes>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
-                    <forceTags>true</forceTags>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>com.spotify</groupId>-->
+                <!--<artifactId>docker-maven-plugin</artifactId>-->
+                <!--<version>1.0.0</version>-->
+                <!--<configuration>-->
+                    <!--<dockerHost>http://49.235.82.50:2375</dockerHost>-->
+                    <!--<imageName>49.235.82.50:8001/${project.build.finalName}:${project.version}</imageName>-->
+                    <!--<baseImage>java</baseImage>-->
+                    <!--<entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>-->
+                    <!--<exposes>1111</exposes>-->
+                    <!--<resources>-->
+                        <!--<resource>-->
+                            <!--<targetPath>/</targetPath>-->
+                            <!--<directory>${project.build.directory}</directory>-->
+                            <!--<include>${project.build.finalName}.jar</include>-->
+                        <!--</resource>-->
+                    <!--</resources>-->
+                    <!--<forceTags>true</forceTags>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <!-- Docker maven plugin -->
         </plugins>
     </build>
