--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,40 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>assistant-rest-admin</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; 指定该Main Class为全局的唯一入口 &ndash;&gt;-->
+                    <!--<mainClass>com.daole.cloud.assistant</mainClass>-->
+                    <!--<layout>ZIP</layout>-->
+                <!--</configuration>-->
+            </plugin>
+            <!--&lt;!&ndash; Docker maven plugin &ndash;&gt;-->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <dockerHost>http://49.235.82.50:2375</dockerHost>
+                    <imageName>49.235.82.50:8001/${project.build.finalName}:${project.version}</imageName>
+                    <baseImage>java</baseImage>
+                    <entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>
+                    <exposes>1111</exposes>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                    <forceTags>true</forceTags>
+                </configuration>
+            </plugin>
+            <!--&lt;!&ndash; Docker maven plugin &ndash;&gt;-->
+        </plugins>
+    </build>
 </project>
