--- a/sso-rest-admin/pom.xml
+++ b/sso-rest-admin/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.daole.cloud</groupId>
             <artifactId>commom-rest-admin</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,14 +36,4 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
