--- a/commom-rest-admin/pom.xml
+++ b/commom-rest-admin/pom.xml
@@ -43,7 +43,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <classifier>execute</classifier>
+                        <classifier>exec</classifier>
                     </configuration>
                 </plugin>
             </plugins>
