--- a/assistant-rest-admin/pom.xml
+++ b/assistant-rest-admin/pom.xml
@@ -11,12 +11,12 @@
     <groupId>com.daole.cloud</groupId>
     <artifactId>assistant-rest-admin</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.2</version>
+    <version>0.0.4</version>
     <name>assistant-rest-admin</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <docker.image.prefix>kitty</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -40,7 +40,6 @@
     </dependencies>
 
     <build>
-        <finalName>assistant-rest-admin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -49,16 +48,12 @@
             <!-- Docker maven plugin -->
             <plugin>
                 <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.9</version>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
                 <configuration>
                     <dockerHost>http://49.235.82.50:2375</dockerHost>
-                    <imageName>vm/${project.build.finalName}:${project.version}</imageName>
-                    <baseImage>java</baseImage>
-                    <!--docker的配置文件所在目录-->
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <dockerDirectory>src/main/docker</dockerDirectory>
-                    <entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>
-                    <exposes>1111</exposes>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
@@ -66,8 +61,23 @@
                             <include>${project.build.finalName}.jar</include>
                         </resource>
                     </resources>
-                    <forceTags>true</forceTags>
                 </configuration>
+                <!--<configuration>-->
+                    <!--<dockerHost>http://49.235.82.50:2375</dockerHost>-->
+                    <!--<imageName>49.235.82.50:8001/${project.build.finalName}:${project.version}</imageName>-->
+                    <!--<baseImage>java</baseImage>-->
+                    <!--&lt;!&ndash;docker的配置文件所在目录&ndash;&gt;-->
+                    <!--<dockerDirectory>src/main/docker</dockerDirectory>-->
+                    <!--<entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>-->
+                    <!--<resources>-->
+                        <!--<resource>-->
+                            <!--<targetPath>/</targetPath>-->
+                            <!--<directory>${project.build.directory}</directory>-->
+                            <!--<include>${project.build.finalName}.jar</include>-->
+                        <!--</resource>-->
+                    <!--</resources>-->
+                    <!--<forceTags>true</forceTags>-->
+                <!--</configuration>-->
             </plugin>
             <!-- Docker maven plugin -->
         </plugins>
