--- a/sso-rest-admin/src/main/resources/application.yml
+++ b/sso-rest-admin/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
     url: jdbc:mysql://49.235.82.50:3306/daole_cloud?useUnicode=true&characterEncoding=utf8
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: root
+    password: Madp123!@#
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
