--- a/commom-rest-admin/src/main/resources/application.yml
+++ b/commom-rest-admin/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-
+aliyun:
+  oss:
+    file:
+      endpoint: oss-cn-beijing.aliyuncs.com
+      keyid: LTAI4FrfnCYueTBdnhJADQ2y
+      keysecret: NRzMULHw6zhD0WWcYNxPMOlEYrF6RF
+      bucketname: daole-oss
+      filehost: ueditor
